[package]
name = "advent_of_code"
version = "0.10.0"
edition = "2015"
default-run = "advent_of_code"
publish = false
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
advent-of-code-ocr = "0.1.1"
anyhow = "1.0.95"
aoc-parse = "0.2.18"
array_tool = "1.0.3"

# Template dependencies
chrono = { version = "0.4.39", optional = true }
dhat = { version = "0.3.3", optional = true }
fancy-regex = "0.14.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
libm = "0.2.11"
memoize = "0.5.1"
nalgebra = "0.33.2"
ndarray = "0.16.1"
num = "0.4.3"
num-modular = "0.6.1"
ordered-float = "4.6.0"
paste = "1.0.15"
pathfinding = "4.14.0"
petgraph = "0.7.1"
pico-args = "0.5.0"
rayon = "1.10.0"
regex = "1.11.1"
rustworkx-core = "0.16.0"
tinyjson = "2.5.1"
topological-sort = "0.2.2"
unindent = "0.2.3"
z3 = "0.12.1"

# Solution dependencies
